crates/codegen/language/tests/src/fail/definitions/duplicate_variant_name/test.stderr
error: A variant referencing 'Baz1' already exists.
  --> src/fail/definitions/duplicate_variant_name/test.rs:19:49
   |
19 |                         EnumVariant(reference = Baz1)
   |                                                 ^^^^
